clean up repository
Co-authored-by: Copilot <copilot@github.com>